# SophiesRocket

./: .gitignore  Dockerfile  LICENSE.md  README.md  bot.py  dev-log.md  llm.py  pyproject.toml  requirements.txt  setup.ps1
.github/workflows/: main.yml
SophiesRocket.git/: config  packed-refs
SophiesRocket.git.bfg-report/2025-04-28/16-12-04/: cache-stats.txt  object-id-map.old-new.txt
SophiesRocket.git/info/: refs
SophiesRocket.git/objects/info/: commit-graph  packs
SophiesRocket.git/objects/pack/: pack-a1d49fb281fa2fa24871b4b6709541b8cb66ab93.bitmap  pack-a1d49fb281fa2fa24871b4b6709541b8cb66ab93.idx  pack-a1d49fb281fa2fa24871b4b6709541b8cb66ab93.pack  pack-a1d49fb281fa2fa24871b4b6709541b8cb66ab93.rev
doc/: dev-log.md
scripts/: setup.ps1  setup_llama.sh
src/: bot.py
src/sophiesrocket/: bot.py
